--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_CROPCONNECT_API = "http://localhost:5000/" 
+VITE_CROPCONNECT_API = "https://krishi-next.vercel.app/" 
 # Replace if you want to run the Backend local server to http://localhost:8080/
