--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 VITE_CROPCONNECT_API = "https://krishi-next.vercel.app/" 
 # Replace if you want to run the Backend local server to http://localhost:8080/
+VITE_API_BASE_URL=https://krishinext-4.onrender.com
